# totvibe-skills

./: .gitignore  .rumdl.toml  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.local.json
.github/: settings.yml
.github/workflows/: ci.yml  claude-review.yml
docs/wiki/: pyts-naming-conventions-short.md  pyts-naming-conventions.md  rust-naming-conventions.md
plan/: peek-extend.md  peek-feedback-2.md  stormitem.md  suggest_change_file_name_and_location.md
plan/done/: fix-skill-cli-invocation.md  peek_suggestion_20260403_085916_891913.md
plan/done/mermaid/: suggestion_20260427_141720_602554.md
plan/done/peek/: new_desc_mode.md  suggestion_20260412_020530_252715.md
plan/done/plan-storm/: suggestion_20260428_214749_172289.md  suggestion_20260428_214812_193165.md  suggestion_20260428_214852_551359.md
plan/done/suggest/: suggestion_20260403_090948_782423.md
plan/ideas/: new-skill-scaffold.md  new-skill-stich.md
plan/skill-suggestions/a2m/: suggestion_20260411_110645_528345.md  (+2 more)
scripts/: dev.py  justfile_helper.py  pusher.py  release.py  skillman.py
skills/gen-commit-message/: SKILL.md
skills/h2md/: .rumdl.toml  README.md  SKILL.md  h2md.py  package.json
skills/mermaid/: SKILL.md
skills/peek/: SKILL.md  package.json  peek.py
skills/plan-storm/: SKILL.md
skills/stormitem/: SKILL.md  package.json  registry.toml  stormitem.py
skills/suggest/: SKILL.md  env.toml  package.json  suggest.py
test-skill/: SKILL.md
tests/: CLAUDE.md  test_release.py  test_skills_valid.py
tests/skills/: conftest.py  test_cli.py
(+63 files in other folders)
