[project]
name = "totvibe-skills"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
test = [
    "pytest>=8",
    "polars>=1.0",
    "skills-ref>=0.1",
    "typer>=0.15",
    "toon-format>=0.9.0b1",
]
lint = [
    "ruff>=0.11",
]
typecheck = [
    "pyright>=1.1",
    "polars>=1.0",
    "typer>=0.15",
    "toon-format>=0.9.0b1",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
