[project]
name = "totvibe-skills"
requires-python = ">=3.14"
version = "0.1.0"
dependencies = []

[dependency-groups]
test = [
    "pytest>=8",
    "duckdb>=1.0",
    "skills-ref>=0.1",
    "typer>=0.15",
    "toon-format>=0.9.0b1",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.0",
    "markdownify>=0.14",
]
lint = [
    "ruff>=0.11",
]
typecheck = [
    "pyright>=1.1",
    "duckdb>=1.0",
    "typer>=0.15",
    "toon-format>=0.9.0b1",
    "pytest>=8",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.0",
    "markdownify>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
